# egui-workbench

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  SPEC.md
examples/workbench-demo/: Cargo.toml
examples/workbench-demo/src/: main.rs
src/: activity_bar.rs  behavior.rs  editor_area.rs  lib.rs  panel_area.rs  persistence.rs  side_bar.rs  side_panel_stack.rs  tab.rs  theme.rs  workspace.rs
src/activity/: mod.rs
src/feature/: mod.rs
src/internal/: mod.rs  tree_adapter.rs
src/menu/: builder.rs  mod.rs  render.rs
tests/: heap_ceiling.rs  menu_builder.rs  menu_render.rs  persistence.rs  resize.rs  smoke.rs  snapshots.rs  split_repro.rs
