[package]
name = "workbench-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "workbench-demo"
path = "src/main.rs"

[dependencies]
egui_workbench = { workspace = true }
egui.workspace = true
egui_extras.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true
